updated unit tests and fixed bugs in SecurityService